# zaniiDB-Agent-Memory

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: anthropic.md  firewall-redteam.md  flight-recorder.md  gov-inspection.md
scripts/: redteam.py
skills/zanii/: README.md  SKILL.md
skills/zanii/reference/: api.md  ecosystem.md  patterns.md  python.md  typescript.md
skills/zaniidb/: README.md  SKILL.md
skills/zaniidb/reference/: api.md  patterns.md  python.md
src/zanii_memory/: __init__.py  adapters.py  autooffload.py  bench.py  cli.py  config.py  core.py  dashboard.py  embedding.py  firewall.py  gateway.py  llm.py  llm_cache.py  mcp_server.py  offload.py  personamem.py  provable.py  recall.py  types.py
src/zanii_memory/pipeline/: __init__.py  consolidate.py  extractor.py  persona.py  scenes.py  scheduler.py  skills.py  supersede.py
src/zanii_memory/store/: __init__.py  base.py  postgres.py  sqlite.py
tasks/: todo.md
tests/: conftest.py  redteam_corpus.py  test_export_import.py  test_firewall.py  test_gateway.py  test_llm.py  test_llm_cache.py  test_mcp.py  test_offload.py  test_personamem.py  test_pipeline.py  test_pipeline_e2e.py  test_postgres.py  test_procedural.py  test_provable.py  test_store.py  test_supersede.py  test_v04_features.py
