[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zaniidb-agent-memory"
version = "0.7.1"
description = "ZaniiDB Agent Memory - layered long-term memory (L0-L3) for AI agents: SQLite + hybrid BM25/vector recall, LLM extraction pipeline, FastAPI gateway, Python SDK."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Zanii" }]
keywords = ["agent", "memory", "llm", "rag", "sqlite", "vector-search", "mcp", "personamem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "sqlite-vec>=0.1.6",
    "mcp>=1.2",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
provable = ["zanii>=0.15.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "zanii>=0.15.0"]

[project.urls]
Homepage = "https://github.com/vigilancetrent/zaniiDB-Agent-Memory"
Repository = "https://github.com/vigilancetrent/zaniiDB-Agent-Memory"

[project.scripts]
zanii-memory = "zanii_memory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zanii_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
